When error typing channel name, the name is memorized, simplifying fixing it.